--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@react-navigation/stack": "^7.1.1",
     "native-base": "^3.4.28",
     "react": "18.3.1",
+    "react-dom": "^19.0.0",
     "react-native": "0.77.0",
     "react-native-gesture-handler": "^2.22.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
-    "react-native-svg-transformer": "^1.5.0"
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
