--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.3.1",
     "react-dom": "^19.0.0",
     "react-native": "0.77.0",
+    "react-native-actions-sheet": "^0.9.7",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.16.7",
