--- a/package.json
+++ b/package.json
@@ -10,24 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "native-base": "^3.4.28",
     "react": "18.3.1",
     "react-dom": "^19.0.0",
     "react-native": "0.77.0",
     "react-native-actions-sheet": "^0.9.7",
+    "react-native-calendars": "^1.1310.0",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.11.1",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-toast-message": "^2.2.1",
+    "react-native-ui-datepicker": "^3.0.4",
     "react-native-vector-icons": "^10.2.0",
     "yup": "^1.6.1"
   },
